force-app/main/default/objects/Achievement_Set__c/Achievement_Set__c.object-meta.xml
<CustomObject>
    <description>Achievement Set</description>
    <label>Achievement Set</label>
    <nameField>
        <label>Achievement Set Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Achievement Sets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>