force-app/main/default/objects/Achievement_Set__c/fields/AboutWho__c.field-meta.xml
<CustomField>
    <fullName>AboutWho__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>About Who</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Surveys About Me</relationshipLabel>
    <relationshipName>SurveysAboutMe</relationshipName>
    <type>Lookup</type>
</CustomField>