force-app/main/default/objects/Achievement_Set__c/fields/Active_Contact__c.field-meta.xml
<CustomField>
    <fullName>Active_Contact__c</fullName>
    <formula>IF(ISBLANK(Contact__c), false, Contact__r.Active__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Active Contact</label>
    <type>Checkbox</type>
</CustomField>