force-app/main/default/objects/Achievement_Set__c/fields/Career_Path__c.field-meta.xml
<CustomField>
    <fullName>Career_Path__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Career Path</label>
    <referenceTo>Career_Path__c</referenceTo>
    <relationshipLabel>Achievement Sets</relationshipLabel>
    <relationshipName>Achievement_Sets</relationshipName>
    <type>Lookup</type>
</CustomField>