force-app/main/default/objects/Achievement_Set__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Contact field is valid only for Contact Survey and Contact Profile record types</errorMessage>
        <filterItems>
            <field>$Source.RecordTypeId</field>
            <operation>equals</operation>
            <value>Employee Profile</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Achievement Sets</relationshipLabel>
    <relationshipName>Achievement_Sets</relationshipName>
    <type>Lookup</type>
</CustomField>