force-app/main/default/objects/Achievement_Set__c/fields/Number_Of_Achievements__c.field-meta.xml
<CustomField>
    <fullName>Number_Of_Achievements__c</fullName>
    <label>Number Of Achievements</label>
    <summaryForeignKey>Achievement_Set_Item__c.Achievement_Set__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>