force-app/main/default/objects/Achievement_Set__c/fields/Parent_Profile__c.field-meta.xml
<CustomField>
    <fullName>Parent_Profile__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Profile</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Please select the Profile Achievement set</errorMessage>
        <filterItems>
            <field>$Source.RecordTypeId</field>
            <operation>equals</operation>
            <value>Position Profile, Specialization</value>
        </filterItems>
        <filterItems>
            <field>Achievement_Set__c.Career_Path__c</field>
            <operation>equals</operation>
            <valueField>$Source.Career_Path__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Achievement_Set__c</referenceTo>
    <relationshipLabel>Achievement Sets</relationshipLabel>
    <relationshipName>Achievement_Sets</relationshipName>
    <type>Lookup</type>
</CustomField>