force-app/main/default/objects/Achievement_Set__c/fields/Score_Minimal_Value__c.field-meta.xml
<CustomField>
    <fullName>Score_Minimal_Value__c</fullName>
    <defaultValue>0.5</defaultValue>
    <description>Minimalne dopasowanie po jakim Profil zostanie przypisany do Pracownika</description>
    <inlineHelpText>Minimalne dopasowanie po jakim Profil zostanie przypisany do Pracownika</inlineHelpText>
    <label>Score Minimal Value</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>