force-app/main/default/objects/Achievement_Set__c/fields/SelfSurvey__c.field-meta.xml
<CustomField>
    <fullName>SelfSurvey__c</fullName>
    <formula>NOT(ISBLANK(AboutWho__c)) &amp;&amp; NOT(ISBLANK(Who__c)) &amp;&amp; AboutWho__c = Who__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Self-Survey</label>
    <type>Checkbox</type>
</CustomField>