force-app/main/default/objects/Achievement_Set__c/fields/Skip_Score_Calculation__c.field-meta.xml
<CustomField>
    <fullName>Skip_Score_Calculation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Skip Score Calculation</label>
    <type>Checkbox</type>
</CustomField>