force-app/main/default/objects/Achievement_Set__c/fields/Unique_Name__c.field-meta.xml
<CustomField>
    <fullName>Unique_Name__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>Unique Name</label>
    <length>40</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>