force-app/main/default/objects/Achievement_Set__c/fields/Who__c.field-meta.xml
<CustomField>
    <fullName>Who__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Who</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>My Surveys</relationshipLabel>
    <relationshipName>MySurveys</relationshipName>
    <type>Lookup</type>
</CustomField>