force-app/main/default/objects/Achievement_Set__c/recordTypes/Achievements_Profile.recordType-meta.xml
<RecordType>
    <fullName>Achievements_Profile</fullName>
    <active>true</active>
    <description>Zbiór umiejętności określający Specjalizację pracownika</description>
    <label>Specialization</label>
</RecordType>