force-app/main/default/objects/Achievement_Set__c/recordTypes/Contact_Profile.recordType-meta.xml
<RecordType>
    <fullName>Contact_Profile</fullName>
    <active>true</active>
    <description>Zbiór umiejętności określający profil pracownika</description>
    <label>Employee Profile</label>
</RecordType>