force-app/main/default/objects/Achievement_Set__c/recordTypes/Position_Profile.recordType-meta.xml
<RecordType>
    <fullName>Position_Profile</fullName>
    <active>true</active>
    <description>Zbiór umiejętności określający stanowsko pracownika</description>
    <label>Position Profile</label>
</RecordType>