force-app/main/default/objects/Achievement_Set__c/recordTypes/Survey.recordType-meta.xml
<RecordType>
    <fullName>Survey</fullName>
    <active>true</active>
    <description>Ankieta opisująca umiejętności pracownika</description>
    <label>Survey</label>
</RecordType>