force-app/main/default/objects/Achievement_Set__c/validationRules/CareerPathFieldForNonProfilePositions.validationRule-meta.xml
<ValidationRule>
    <fullName>CareerPathFieldForNonProfilePositions</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
 NOT(OR(
  CONTAINS(RecordType.DeveloperName, &apos;Position_Profile&apos;), 
  CONTAINS(RecordType.DeveloperName, &apos;Achievements_Profile&apos;)
 )),
 NOT(ISBLANK(Career_Path__c))
)</errorConditionFormula>
    <errorMessage>Field Career Path cannot be filled for non Postion Profile Sets</errorMessage>
</ValidationRule>