force-app/main/default/objects/Achievement_Set__c/validationRules/CareerPathFieldForPositionProfile.validationRule-meta.xml
<ValidationRule>
    <fullName>CareerPathFieldForPositionProfile</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
 OR(
  CONTAINS(RecordType.DeveloperName, &apos;Position_Profile&apos;), 
  CONTAINS(RecordType.DeveloperName, &apos;Achievements_Profile&apos;)
 ),
 ISBLANK(Career_Path__c)
)</errorConditionFormula>
    <errorMessage>Please fill the Career Path field</errorMessage>
</ValidationRule>