force-app/main/default/objects/Achievement_Set__c/validationRules/ContactFieldForContactAchievementSets.validationRule-meta.xml
<ValidationRule>
    <fullName>ContactFieldForContactAchievementSets</fullName>
    <active>true</active>
    <errorConditionFormula>AND(CONTAINS(RecordType.DeveloperName, &apos;Contact&apos;),  ISBLANK(Contact__c))</errorConditionFormula>
    <errorMessage>Please fill the Contact field</errorMessage>
</ValidationRule>