force-app/main/default/objects/Achievement_Set__c/validationRules/ContactFieldForNonContactAchievementSets.validationRule-meta.xml
<ValidationRule>
    <fullName>ContactFieldForNonContactAchievementSets</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT(CONTAINS(RecordType.DeveloperName, &apos;Contact&apos;)),  NOT(ISBLANK(Contact__c)))</errorConditionFormula>
    <errorMessage>Field Contact cannot be filled for non Contact Achievement Sets</errorMessage>
</ValidationRule>