force-app/main/default/objects/Achievement_Set__c/validationRules/WhoAndAboutWhoFieldForNonSurveys.validationRule-meta.xml
<ValidationRule>
    <fullName>WhoAndAboutWhoFieldForNonSurveys</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
 NOT(CONTAINS(RecordType.DeveloperName, &apos;Survey&apos;)),
 OR(NOT(ISBLANK(Who__c)),
    NOT(ISBLANK(AboutWho__c))
 )
)</errorConditionFormula>
    <errorMessage>Field Who and About Who cannot be filled for non Survey Sets</errorMessage>
</ValidationRule>