force-app/main/default/objects/Achievement_Set__c/validationRules/WhoAndAboutWhoFieldForSurveys.validationRule-meta.xml
<ValidationRule>
    <fullName>WhoAndAboutWhoFieldForSurveys</fullName>
    <active>true</active>
    <errorConditionFormula>AND(CONTAINS(RecordType.DeveloperName, &apos;Survey&apos;),  OR(ISBLANK(Who__c), ISBLANK(AboutWho__c)))</errorConditionFormula>
    <errorMessage>Please fill the Who and About Who fields</errorMessage>
</ValidationRule>