force-app/main/default/objects/Achievement_Set__c/listViews/Position_Profiles.listView-meta.xml
<ListView>
    <fullName>Position_Profiles</fullName>
    <columns>NAME</columns>
    <columns>Career_Path__c</columns>
    <columns>Parent_Profile__c</columns>
    <columns>Number_Of_Achievements__c</columns>
    <columns>Score_Minimal_Value__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Achievement_Set__c.Position_Profile</value>
    </filters>
    <label>Position Profiles</label>
</ListView>