force-app/main/default/objects/Achievement_Set__c/listViews/Surveys.listView-meta.xml
<ListView>
    <fullName>Surveys</fullName>
    <columns>NAME</columns>
    <columns>Who__c</columns>
    <columns>AboutWho__c</columns>
    <columns>SelfSurvey__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Number_Of_Achievements__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Achievement_Set__c.Survey</value>
    </filters>
    <label>Surveys</label>
</ListView>